# packet_captor_sakura

./: CITATION.cff  README.md
.github/: CODE_OF_CONDUCT.md
.github/workflows/: data_collection.yml  data_generator.yml  dockerimage.yml  rust.yml
analysis/: .gitignore  Research.ipynb  requirements.txt  shell-gpu.nix  shell.nix  signatures.csv
analysis/.ipynb_checkpoints/: Research-checkpoint.ipynb
data_collection/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  config.toml  docker-compose.yml  entrypoint.sh  shell.nix
data_collection/src/: main.py  proxy.py  requester.py  requirements.txt  tcpdump.py  utils.py  worker.py
data_collection/src/scripts/: get_config.py  install_python_dependencies.sh
data_collection/tcpdump_controller/: Dockerfile  Makefile  README.md  entrypoint.sh
data_collection/tcpdump_controller/tcpdump_controller/: Cargo.toml  shell.nix
data_collection/tcpdump_controller/tcpdump_controller/src/: error.rs  (+1 more)
data_collection/url_queue/: Dockerfile  README.md  config.toml  entrypoint.sh
data_collection/url_queue/url_queue/: .gitignore  Cargo.toml  config.toml.example  shell.nix
data_collection/url_queue/url_queue/src/: capture.rs  config.rs  lib.rs  main.rs  service.rs  shutdown.rs  url.rs  work.rs
data_generator/: .gitignore  Cargo.toml  shell.nix
data_generator/src/: bro_types.rs  dataset.rs  entropy.rs  features.rs  flow_aggregator.rs  main.rs  packet.rs  pcap.rs
paper/: .usenix2019_v3.1.tex.swp  Makefile  paper.aux  paper.bib  paper.out  paper.tex  usenix2019_v3.1.aux  usenix2019_v3.1.out  usenix2019_v3.1.tex
